# makkays_chatbot

./: .dockerignore  .env.example  .gitignore  00-README-and-credentials.md  01-foundation-configuration.md  02-database-cache-layer.md  03-session-state-management.md  04-conversation-turns-logging.md  05-llm-engine-ollama.md  06-router-intent-classification.md  07-task-planner.md  08-prompt-manager.md  09-feature-flags.md  10-security-policy-tool-executor.md  11-rag-engine.md  12-quote-builder.md  13-clarification-templates.md  14-crm-integration-email-retry.md  15-public-api-widget-session.md  16-observability-metrics.md  17-frontend-application.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  ipower_products_standard.csv  module-01-project-foundation.md  module-02-database-infrastructure.md  module-03-document-ingestion.md  module-04-embedding-indexing.md  module-05-retrieval-engine.md  module-06-llm-integration.md  module-07-chat-api.md  module-08-website-widget.md  module-09-lead-support-system.md  module-10-admin-dashboard.md  module-11-security-guardrails.md  module-12-testing-evaluation.md  (+5 more)
I power documents/: makkays_ipower_models.csv  makkays_ipower_products.csv  makkays_ipower_products.md
RAG Knowledge/: apply_ups_data_correction.py  build_ipower_from_standard.py  convert_products_v3.py  makkays_iconnect_models.csv  makkays_iconnect_products.csv  makkays_iconnect_products.md  makkays_ipower_models.csv  makkays_ipower_products.csv  makkays_ipower_products.md  resolve_flagged.py
Updated Knowledge files/: ipower_AVR_RAG.jsonl  ipower_AVR_refined.xlsx  ipower_Battery_RAG.jsonl  ipower_Battery_refined.xlsx  ipower_UPS_RAG.jsonl  ipower_UPS_refined.xlsx
app/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py
(+296 files in other folders)
