[project]
name = "makkays-chatbot"
version = "0.1.0"
description = "FastAPI AI Sales Engineer backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "jsonschema>=4.23.0",
    "cachetools>=5.3.0",
    "PyYAML>=6.0.1",
    "qdrant-client>=1.11.0",
    "FlagEmbedding>=1.2.10",
    "reportlab>=4.2.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "stress: mark test as a stress test"
]

[tool.ruff]
line-length = 100
target-version = "py312"
